add queues and update stacks

--- a/Data_Structure/Stacks.ipynb
+++ b/Data_Structure/Stacks.ipynb
@@ -123,13 +123,17 @@
     "### Implementation using collections.deque\n",
     "当我们需要<ins>quicker append and pop operations from both the ends of the container时</ins>，用collection.deque会比用list更好；\n",
     "\n",
+    "**Deque** is an optimal version of list used for inserting and removing items. It can add/remove items from either start or the end of the list.\n",
+    "\n",
     "用deque的append和pop只需要O(1)， 而list需要O(n)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -172,6 +176,38 @@
     " \n",
     "print('\\nStack after elements are popped:')\n",
     "print(stack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque(['a', 'b', 'c'])\n",
+      "deque(['g', 'a', 'b', 'c', 'z'])\n",
+      "deque(['a', 'b', 'c'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import deque  \n",
+    "#initialization\n",
+    "list = [\"a\",\"b\",\"c\"]  \n",
+    "deq = deque(list)  \n",
+    "print(deq)  \n",
+    "\n",
+    "#insertion\n",
+    "deq.append(\"z\")  \n",
+    "deq.appendleft(\"g\")  \n",
+    "print(deq)\n",
+    "#removal\n",
+    "deq.pop()  \n",
+    "deq.popleft()  \n",
+    "print(deq)"
    ]
   },
   {
